# fiber

./: .gitignore  build.bash  build.bat  language-Notepad++.xml  lineCounter.js  main.cpp  makefile  readme.md
brand/: logo.gvdesign
code/: main.cpp
code/lib/: function.cpp  function.h  function.hpp  hexidecimal.cpp  hexidecimal.h  hexidecimal.hpp  instance.cpp  instance.h  instance.hpp  memory.cpp  memory.h  memory.hpp  register.cpp  register.h  register.hpp  segregate.cpp  segregate.h  segregate.hpp  sys.cpp  sys.h  sys.hpp  thread.cpp  thread.h  thread.hpp
code/lib/experimental/: thread.cpp  thread.h
code/lib/os/: unix.cpp  unix.h  win.cpp  win.h
docs/: index.md  worker.md
docs/commands/: cat_io.md  cat_math.md  cat_memory.md
docs/internals/: classes.md  commands.md  index.md
docs/language/: commands.md  concepts.md  index.md  opperands.md
example/: boolean.fib  commands.fib  fib.fib  fibonacci.fab  fibonacci.fib  function.fib  hello-work.fib  hello-world.fib  if.fib  loop.fib  temp.fib  test.fib
lib/: interpreter.cpp  interpreter.h  memory.cpp  memory.h  thread.cpp  thread.h
source/: CMakeLists.txt  flags.hpp  main.cpp
source/lib/: command.cpp  command.hpp  typebase.hpp
source/lib/execution/: bytecode.cpp  bytecode.hpp  eventloop.cpp  eventloop.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  register.cpp  register.hpp  thread.cpp  thread.hpp
source/lib/interprete/: function.cpp  function.hpp  interpreter.cpp  interpreter.hpp  table.cpp  table.hpp  tokenize.cpp  tokenize.hpp
source/lib/tokens/: tokenize.cpp  tokenize.hpp
(+32 files in other folders)
